# claw-ttyproxy

./: .gitignore  Cargo.toml  README.md  TOKEN_QUOTA_CONTRACT.md
.github/workflows/: release.yml
src/: config.rs  lib.rs  main.rs  usage.rs
src/api/: handlers.rs  types.rs
src/dashboard/: index.html  log_store.rs  mod.rs
src/middleware/: logging.rs
src/proxy/: bedrock.rs  claude.rs  mod.rs  stream.rs
tests/: integration.rs  mock_claude.rs
