[package]
name = "ttyproxy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
chrono = "0.4"
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
hex = "0.4"
futures = "0.3"
bytes = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-stream = "0.1"
async-stream = "0.3"
reqwest = { version = "0.12", features = ["json", "stream"] }
base64 = "0.22"

[dev-dependencies]
portpicker = "0.1"

[profile.release]
strip = true
lto = true

[[bin]]
name = "mock-claude"
path = "tests/mock_claude.rs"
